@@ -5,6 +5,7 @@
 - Added a event dispatcher.
 - Added deeper search for the source code getter analysis for
   better results.
+- Added a forced logger, which van be reached by \Krexx:log();
 - Change: Some internal renaming.
 - Bugfix: The position of the search field of the hans skin is now
   calculated correct when the viewport is not on top.
